--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -95,6 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Není viditelné v záhlaví okna Windows OS, pouze v záhlaví okna &brandShortName;u!">
 <!ENTITY Ctr_appbuttonI2	"Barvy tlačítka jsou viditelné pouze v záhlaví okna nebo liště s panely!">
 <!ENTITY Ctr_appbutmhi		"Vyšší umístění (pokud na liště s panely)">
+<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
 <!ENTITY Ctr_appbutbdl		"Skrýt okraje a barvy pozadí">
 <!ENTITY Ctr_dblclclosefx	"Dvojklik zavře současné okno">
 <!ENTITY Ctr_appbclmmenus	"Volitelný název tlačítka aplikace (Nový panel, Tisk...)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"Odstranit barevné/zamlžené pozadí (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Barvy 'Blue Aero' pro hlavní lištu a panely">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Navigační lišta: skrýt lištu">
 <!ENTITY Ctr_nobookbarbg	"Lišta záložek: odstranit barvu pozadí">
 <!ENTITY Ctr_bookbarfs		"Lišta záložek: v celoobrazovkovém módu (fullscreen)">
@@ -285,6 +287,8 @@
 <!ENTITY Ctr_e_prefsui		"Předvolby panelů">
 <!ENTITY Ctr_e_readermode	"Mód čtečky">
 <!ENTITY Ctr_e_pocket		"Pocket">
+<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
 
 
 <!ENTITY Ctr_pw_settings	"Možnosti">
