--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -95,6 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Invisível na Barra de Título do Sistema Operacional">
 <!ENTITY Ctr_appbuttonI2	"Colorido só nas Barras de Título e de Abas!">
 <!ENTITY Ctr_appbutmhi		"Posição No Topo (Se na Barra de Abas)">
+<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
 <!ENTITY Ctr_appbutbdl		"Ocultar as Bordas e Cores do Fundo">
 <!ENTITY Ctr_dblclclosefx	"Clicar Duas Vezes para Fechar a Janela Atual">
 <!ENTITY Ctr_appbclmmenus	"Menus Clicáveis Dentro do Menu do Botão (Nova Aba, Imprimir...)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"Remover a Cor/Névoa do Fundo (Windows AeroGlass/Win8)">
 
 <!ENTITY Ctr_aerocolors		"Cores Azul Aero para Barras de Ferramentas Principais e Abas">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Ocultar a Barra de Navegação">
 <!ENTITY Ctr_nobookbarbg	"Barra de Favoritos: Remover a Cor do Fundo">
 <!ENTITY Ctr_bookbarfs		"Barra de Favoritos: No Modo de Tela Cheia">
@@ -285,6 +287,8 @@
 <!ENTITY Ctr_e_prefsui		"Preferences in tab">
 <!ENTITY Ctr_e_readermode	"Reader mode">
 <!ENTITY Ctr_e_pocket		"Pocket">
+<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
 
 
 <!ENTITY Ctr_pw_settings	"Configurações">
