--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -95,6 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Windows başlık çubuğunda görünür değil!">
 <!ENTITY Ctr_appbuttonI2	"Sadece buton renkleri görünür">
 <!ENTITY Ctr_appbutmhi		"Daha yüksek pozisyon (eğer sekmeler araç çubuğu üstünde ise)">
+<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
 <!ENTITY Ctr_appbutbdl		"Sınırları ve arka plan renklerini gizle">
 <!ENTITY Ctr_dblclclosefx	"Çift tıklama mevcut pencereyi kapatır">
 <!ENTITY Ctr_appbclmmenus	"Sekmelerde tıklanabiir menüler(Yeni sekme, Yazdır...)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"Arkaplan bulanıklığı/rengi kaldır (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Araç çubukları için Mavi Aero renkleri (ve sekmelere)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Gezinti Araç çubuğu: Çubuğu gizle">
 <!ENTITY Ctr_nobookbarbg	"Yerimi araç çubuğu: Arkaplan rengini kaldır">
 <!ENTITY Ctr_bookbarfs		"Yerimi araç çubuğu: Tam Ekran modunda">
@@ -285,6 +287,8 @@
 <!ENTITY Ctr_e_prefsui		"Sekmeler içinde tercihler">
 <!ENTITY Ctr_e_readermode	"Okuyucu Modu">
 <!ENTITY Ctr_e_pocket		"Pocket">
+<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
 
 
 <!ENTITY Ctr_pw_settings	"Ayarlar">
