--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -95,6 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"在 Windows 系统标题栏上不可见，仅在 &brandShortName; 标题栏上!">
 <!ENTITY Ctr_appbuttonI2	"按钮颜色只在标题栏与标签页栏上可见!">
 <!ENTITY Ctr_appbutmhi		"更高的位置 (如果在标签页栏上)">
+<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
 <!ENTITY Ctr_appbutbdl		"隐藏边框和背景色">
 <!ENTITY Ctr_dblclclosefx	"双击关闭当前窗口">
 <!ENTITY Ctr_appbclmmenus	"按钮菜单内的可点击菜单 (新建标签页, 打印...)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"移除背景颜色/模糊 (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"主工具栏和标签页使用蓝色 Aero 颜色">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"导航工具栏: 隐藏工具栏">
 <!ENTITY Ctr_nobookbarbg	"书签工具栏: 移除背景颜色">
 <!ENTITY Ctr_bookbarfs		"书签工具栏: 在全屏模式">
@@ -285,6 +287,8 @@
 <!ENTITY Ctr_e_prefsui		"标签页中显示选项设置">
 <!ENTITY Ctr_e_readermode	"阅读模式">
 <!ENTITY Ctr_e_pocket		"Pocket">
+<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
