--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -95,6 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Ikke synlig i Windows OS-titellinjen, kun i &brandShortName;-titellinjen!">
 <!ENTITY Ctr_appbuttonI2	"Farverne på knapperne er kun synlige i titellinjen og fanebladslinjen!">
 <!ENTITY Ctr_appbutmhi		"Højere placering (hvis den er på fanebladslinje)">
+<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
 <!ENTITY Ctr_appbutbdl		"Skjul kanter og baggrundsfarver">
 <!ENTITY Ctr_dblclclosefx	"Dobbeltklik lukker aktuelt vindue">
 <!ENTITY Ctr_appbclmmenus	"Klikbare menuer inde i knapmenuen (Nyt faneblad, Udskriv...)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"Fjern baggrundsfarve/tåge (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Blå Aero-farver til værktøjslinjer (og faneblade)">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Navigationslinjen: skjul værktøjslinje">
 <!ENTITY Ctr_nobookbarbg	"Bogmærkelinje: fjern baggrundsfarve">
 <!ENTITY Ctr_bookbarfs		"Bogmærkelinje: i fuldskærmstilstand">
@@ -285,6 +287,8 @@
 <!ENTITY Ctr_e_prefsui		"Indstillinger i faneblade">
 <!ENTITY Ctr_e_readermode	"Læsertilstand">
 <!ENTITY Ctr_e_pocket		"Pocket">
+<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
 
 
 <!ENTITY Ctr_pw_settings	"Indstillinger">
