--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -95,6 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &brandShortName; заголовку!">
 <!ENTITY Ctr_appbuttonI2	"Кольори кнопок видимі тільки на панелях заголовку і вкладок!">
 <!ENTITY Ctr_appbutmhi		"Вища позиція (якщо на панелі вкладок)">
+<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
 <!ENTITY Ctr_appbutbdl		"Сховати рамки та кольори тла">
 <!ENTITY Ctr_dblclclosefx	"Подвійний клік закриває поточне вікно">
 <!ENTITY Ctr_appbclmmenus	"Активне меню всередині меню кнопки (Нова вкладка, Друк...)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"Прибрати затуманення/колір тла (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Кольори Blue Aero для основних панелей і вкладок">
+<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Панель навігації: приховати панель">
 <!ENTITY Ctr_nobookbarbg	"Панель закладок: прибрати колір тла">
 <!ENTITY Ctr_bookbarfs		"Панель закладок: у повноекранному режимі">
@@ -285,6 +287,8 @@
 <!ENTITY Ctr_e_prefsui		"Налаштування у вкладці">
 <!ENTITY Ctr_e_readermode	"Режим читання">
 <!ENTITY Ctr_e_pocket		"Pocket">
+<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
 
 
 <!ENTITY Ctr_pw_settings	"Налаштування">
